<resources>
    <string name="a11y_call_duration_format">%1$d %2$s %3$d %4$s</string>
    <string name="a11y_call_duration_short_format">%1$d %2$s</string>
    <string name="a11y_call_incoming_answer_description">Answer</string>
    <string name="a11y_call_incoming_decline_description">Decline</string>
    <string name="a11y_description_incall_label_manage_content">Manage callers</string>
    <string name="a11y_description_incoming_call_answer_and_release">Answer and end ongoing call</string>
    <string name="a11y_description_incoming_call_answer_video_as_audio">Answer as audio call</string>
    <string name="a11y_description_incoming_call_reject_with_sms">Reject with message</string>
    <string name="a11y_glide_photo_manager_contact_photo_description">Quick contact for ^1</string>
    <string name="a11y_incoming_call_answer_and_release">Answer and end ongoing call</string>
    <string name="a11y_incoming_call_answer_video_as_audio">Answer as audio call</string>
    <string name="a11y_incoming_call_reject_with_sms">Reject this call with a message</string>
    <string name="a11y_incoming_call_swipe_gesture_prompt">Two finger swipe up to answer. Two finger swipe down to decline.</string>
    <string name="a11y_incoming_call_swipe_to_answer">Swipe up with two fingers to answer or down to reject the call</string>
    <string name="a11y_new_call_log_entry_full_description_with_phone_account_info">^1, ^2, ^3.</string>
    <string name="a11y_new_call_log_entry_full_description_without_phone_account_info">^1, ^2.</string>
    <string name="a11y_new_call_log_entry_phone_account">on ^1, via ^2</string>
    <string name="a11y_new_call_log_entry_tap_action">expand menu</string>
    <string name="a11y_new_call_log_entry_video_call">make a video call to ^1</string>
    <string name="a11y_new_call_log_entry_voice_call">call ^1</string>
    <string name="a11y_voicemail_entry_call">Call number</string>
    <string name="a11y_voicemail_entry_delete">Delete</string>
    <string name="a11y_voicemail_entry_expand_menu">Expand menu for this voicemail entry</string>
    <string name="a11y_voicemail_entry_pause">Pause</string>
    <string name="a11y_voicemail_entry_play">Play</string>
    <string name="a11y_voicemail_entry_speaker">Speaker</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_phone_label">About</string>
    <string name="accessibility_settings_title">Accessibility</string>
    <string name="account_phone">Device-only, unsynced</string>
    <string name="action_copy_number_text">Copy number</string>
    <string name="action_edit_number_before_call">Edit number before call</string>
    <string name="action_menu_back_from_search">stop searching</string>
    <string name="action_menu_call_history_description">Call history</string>
    <string name="action_menu_dialpad_button">key pad</string>
    <string name="action_menu_overflow_description">More options</string>
    <string name="activate_greeting">Apply greeting</string>
    <string name="activate_greeting_failure">Unable to apply greeting.</string>
    <string name="activate_greeting_success">Greeting applied successfully.</string>
    <string name="activate_reminder">You need to apply the selected greeting for it to be used.</string>
    <string name="activity_not_available">No app for that on this device</string>
    <string name="activity_tmo_vvm_tutorial_title">Visual Voicemail Tutorial</string>
    <string name="addBlockedNumber">Add number</string>
    <string name="add_2sec_pause">Add 2-sec pause</string>
    <string name="add_contact_not_available">No contacts app available</string>
    <string name="add_favorite_activity_title">Add Favorite</string>
    <string name="add_to_contacts">Add to contact</string>
    <string name="add_wait">Add wait</string>
    <string name="advanced_settings_pref_title">Advanced settings</string>
    <string name="air_incall_setting_title">Air call-acceptance</string>
    <string name="all_contacts">All contacts</string>
    <string name="all_contacts_empty">"You don't have any contacts yet"</string>
    <string name="all_contacts_empty_add_contact_action">Create new contact</string>
    <string name="allow">Allow</string>
    <string name="alreadyBlocked">%1$sis already blocked.</string>
    <string name="always_warn">Show warning every time</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="answer_remotely">Answered Remotely</string>
    <string name="antispam_classify">Call intercept classify</string>
    <string name="antispam_classify_activity_permission">Harassment blocking set permissions</string>
    <string name="antispam_classify_bilk_call">Bilk call interception</string>
    <string name="antispam_classify_call">Harassing call interception</string>
    <string name="antispam_classify_headhunter">Headhunter interception</string>
    <string name="antispam_classify_insurance">Insurance interception</string>
    <string name="antispam_classify_real_estate_agency">Real estate agency interception</string>
    <string name="antispam_classify_sell">Sales call interception</string>
    <string name="antispam_harass_activity_title">Number recognition and call interception</string>
    <string name="antispam_harass_switch_title">Anti-spam</string>
    <string name="antispam_strange_btitle">Block no number calls</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applicationLabel">Phone</string>
    <string name="assisted_dialing_country_code_entry">Assisted dialing: Used country code +%1$s</string>
    <string name="assisted_dialing_country_code_entry_failure">Assisted dialing was used</string>
    <string name="assisted_dialing_setting_cc_category_title">Home country</string>
    <string name="assisted_dialing_setting_cc_default_summary">Automatically detected • %1$s</string>
    <string name="assisted_dialing_setting_cc_default_summary_fallback">Automatically detected</string>
    <string name="assisted_dialing_setting_cc_key">assisted_dialing_setting_cc_key</string>
    <string name="assisted_dialing_setting_cc_title">Default home country</string>
    <string name="assisted_dialing_setting_summary">Predict and add a country code when you call while traveling abroad</string>
    <string name="assisted_dialing_setting_title">Assisted dialing</string>
    <string name="assisted_dialing_setting_toggle_key">assisted_dialing_setting_toggle_key</string>
    <string name="att_call_downgraded_voice_remote">Call was switched to voice</string>
    <string name="att_card_title_video_call_requesting">Waiting for response</string>
    <string name="att_card_title_video_request_rejected">Video declined</string>
    <string name="att_contact_grid_share_video_request">%s is requesting to share their video</string>
    <string name="att_contact_grid_video_upgrade_request">Video call request from %s</string>
    <string name="att_remote_switchoff_cam">%s stopped sharing video</string>
    <string name="att_rtt_calls_merge_warning">Once calls are merged, RTT will stop.</string>
    <string name="att_rtt_dropped_on_merge_receiver">RTT is dropped, you are currently in a voice conference call.</string>
    <string name="att_rtt_dropped_on_merge_sender">RTT is dropped, calls are merged.</string>
    <string name="att_rtt_end_call_msg">Rtt call ended</string>
    <string name="att_rtt_merge">Merge</string>
    <string name="att_rtt_merge_title">Merge calls?</string>
    <string name="att_rtt_remote_not_rtt_capable">"The party you've called cannot receive RTT calls."</string>
    <string name="att_rtt_ui_msg">Real Time Text (RTT) allows you to have a text conversation during a call.</string>
    <string name="att_servicedetails_header">AT&amp;T Video Call Service Details</string>
    <string name="att_servicedetails_text">"To use AT&amp;T Video Call, all parties must be AT&amp;T customers with Video Call-capable devices, located in AT&amp;T HD Voice coverage, and must have Video Call set up on their account. Each Video Call uses both voice and data. The voice portion of the call counts as voice minutes, and the video portion counts as data under your wireless rate plan. Once you have started a Video Call, it will seamlessly switch to Wi-Fi if your device has access to the Internet through its Wi-Fi connection. To continue a video call on Wi-Fi you must still remain connected to the AT&amp;T wireless network. No voice or data charges apply to Video Call over Wi-Fi. The Video Call icon tells you when you are able to make a video call. Other AT&amp;T subscribers can see if you are capable of receiving video calls. You can disable AT&amp;T Video Call in Call Settings on your device. For more information and restrictions, visit  www.att.com/videocall."</string>
    <string name="att_welcomevt_header">Your phone supports AT&amp;T Video Call</string>
    <string name="build_version_key">build_version</string>
    <string name="build_version_label">Build version</string>
    <string name="incall_content_description_end_call">End call</string>
    <string name="licenseActivityLabel">Open source licenses</string>
    <string name="open_source_license_detail_label">License details for open source software</string>
    <string name="open_source_licenses_key">open_source_licenses</string>
    <string name="prc_back_to_call">Back to call</string>
    <string name="prc_emergency_platform_lable">Emergency Alarm Assist</string>
    <string name="prc_emergency_platform_switch_tips">To make sure the Emergency Alarm Assist functions properly, you must select \"Precise location\" and \"Allow only when using the app\" after turning it on.</string>
    <string name="prc_emergency_platform_tips">When the Emergency Alarm Assist is used to make an emergency call (such as 110, 120, 119, 122), the system automatically gets your current location and sends it to the police so as to buy more time for rescuers to arrive at the scene.</string>
    <string name="prc_voicemail_picking">Leaving a message…</string>
    <string name="rtt_not_supported_in_cli">Flip open to continue RTT call</string>
</resources>