<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@id/neat_mode_touch_handler"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
    <RelativeLayout
        android:id="@id/incall_ui_container"
        android:fitsSystemWindows="true"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <include
            layout="@layout/voice_action_menu_layout" />
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@id/all_contact"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/incall_window_margin_top"
            android:layout_marginStart="@dimen/cli_incall_contact_margin_left_right"
            android:layout_marginEnd="@dimen/cli_incall_contact_margin_left_right">
            <ImageView
                android:layout_gravity="center_vertical"
                android:id="@id/contactgrid_avatar"
                android:layout_width="@dimen/incall_avatar_size"
                android:layout_height="@dimen/incall_avatar_size"
                android:scaleType="centerCrop" />
            <LinearLayout
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:id="@id/incall_contact_grid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/incall_window_margin_horizontal">
                <com.android.incallui.autoresizetext.AutoResizeTextView
                    android:textAppearance="@style/Dialer.Incall.TextAppearance.Large"
                    android:ellipsize="end"
                    android:id="@id/contactgrid_contact_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/incall_namerow_margin_bottom"
                    android:singleLine="true"
                    app:autoResizeText_minTextSize="@dimen/incall_textappearance_large_size" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <include
                        android:id="@id/contactgrid_top_row"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        layout="@layout/incall_contactgrid_top_row" />
                    <include
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        layout="@layout/incall_contactgrid_bottom_row" />
                </LinearLayout>
                <FrameLayout
                    android:id="@id/incall_location_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent" />
                <include
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    layout="@layout/device_number_row" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:textSize="@dimen/prc_voicemail_text_size"
            android:textColor="@color/prc_incall_grid_text_color"
            android:layout_gravity="center"
            android:id="@id/voice_mail_picking"
            android:paddingTop="16.0dip"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prc_voicemail_picking"
            android:layout_centerHorizontal="true" />
        <com.android.dialer.widget.LockableViewPager
            android:id="@id/incall_pager"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/incall_paginator"
            android:layout_below="@id/all_contact"
            android:layout_centerHorizontal="true" />
        <com.android.incallui.incall.impl.InCallPaginator
            android:id="@id/incall_paginator"
            android:visibility="gone"
            android:layout_width="@dimen/paginator_width"
            android:layout_height="@dimen/paginator_height"
            android:layout_above="@id/incall_bottom_row"
            android:layout_centerHorizontal="true" />
        <LinearLayout
            android:orientation="horizontal"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/incall_bottom_row"
            android:layout_below="@id/all_contact">
            <FrameLayout
                android:id="@id/incall_dialpad_container"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </LinearLayout>
        <TextView
            android:textStyle="italic"
            android:id="@id/rtt_ui_not_supported"
            android:padding="5.0dip"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rtt_not_supported_in_cli"
            android:layout_above="@id/incall_bottom_row"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:layout_marginStart="20.0dip"
            android:layout_marginEnd="20.0dip" />
        <TextView
            android:textSize="@dimen/prc_voicemail_text_back_to_call_size"
            android:textColor="@color/prc_incall_grid_text_color"
            android:id="@id/back_to_call"
            android:visibility="gone"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prc_back_to_call"
            android:drawableTop="@drawable/prc_ic_back_to_call"
            android:drawablePadding="@dimen/prc_voicemail_text_drawable_back_to_call_padding"
            android:layout_above="@id/incall_bottom_row"
            android:layout_centerHorizontal="true"
            android:textAlignment="gravity"
            android:drawableTint="@color/prc_incall_grid_text_color" />
        <RelativeLayout
            android:id="@id/incall_bottom_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <com.android.incallui.incall.impl.CheckableLabeledButton
                android:enabled="false"
                android:gravity="center"
                android:id="@id/left_external_incall_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/incall_window_margin_horizontal"
                android:layout_alignParentStart="true" />
            <ImageButton
                android:id="@id/incall_end_call"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/incall_content_description_end_call"
                style="@style/Incall.Button.End" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/prc_button_margin_left_and_right"
                android:layout_marginTop="@dimen/end_call_button_margin_top"
                android:layout_marginRight="@dimen/prc_button_margin_left_and_right"
                android:layout_centerVertical="true">
                <com.android.incallui.incall.impl.CheckableLabeledButton
                    android:enabled="false"
                    android:gravity="center"
                    android:id="@id/incall_dialpad"
                    android:layout_width="0.0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0" />
                <Space
                    android:layout_width="0.0px"
                    android:layout_height="0.0px"
                    android:layout_weight="1.0" />
                <RelativeLayout
                    android:layout_width="0.0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0">
                    <com.android.incallui.incall.impl.CheckableLabeledButton
                        android:gravity="center"
                        android:id="@id/incall_speaker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true" />
                    <ImageView
                        android:id="@id/incall_speaker_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/incall_dialpad_button_margin"
                        android:src="@drawable/prc_icon_speaker_more"
                        android:tint="@color/prc_incall_speaker_more_color"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>
            </LinearLayout>
            <com.android.incallui.incall.impl.CheckableLabeledButton
                android:enabled="false"
                android:gravity="center"
                android:id="@id/right_external_incall_button"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/incall_window_margin_horizontal"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </RelativeLayout>
    <FrameLayout
        android:layout_gravity="top"
        android:id="@id/incall_on_hold_banner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
</FrameLayout>